# WslProjects

./: Project2.code-workspace  Project4.code-workspace  Project6.code-workspace  Project8.code-workspace  Project9.code-workspace  README.md  Template.code-workspace
project1/: CMakeLists.txt  main.cpp
project1/include/: BuddyAllocator.h  MemoryPoolStruct.h  SlabAllocator.h
project1/tests/: TEST_01.cpp  TEST_02.cpp  TEST_03.cpp
project1/tmp/: a.out  test.cpp
project2/: CMakeLists.txt  main.cpp
project2/include/: SharedPtr.h  UniqPtr.cpp
project2/tests/: TEST01.cpp  TEST02.cpp
project3/: CMakeLists.txt  main.cpp
project3/include/: FixArray.h  MetaTemplate.h  MutableArgs.h  SFINAE.h  TemplateClass.h  TemplateFunc.h  TypeTraits.h
project3/tests/: TEST01.cpp  TEST02.cpp  TEST03.cpp  TEST04.cpp  TEST05.cpp  TEST06.cpp  TEST07.cpp
project4/: CMakeLists.txt  main.cpp
project4/include/: TT.h  TypeList.h
project4/tests/: TEST01.cpp  TEST02.cpp
project5/: CMakeLists.txt  main.cpp
project5/include/: A.h  Exercise.h  Traits.h
project5/tests/: TEST01.cpp  TEST02.cpp  TEST03.cpp
project6/: CMakeLists.txt
project6/include/: Valgrind.h
project6/tests/: TEST01.cpp  TEST02.cpp
project7/: CMakeLists.txt
project7/include/: Exercise.h
project7/tests/: TEST01.cpp
project8/: CMakeLists.txt  main.cpp
project8/include/: ConditionVariable.h  Exercise.h  Mutex.h  Thread.h  ThreadException.h
project8/tests/: TEST01.cpp  TEST02.cpp
project9/: CMakeLists.txt  main.cpp
project9/include/: A.h
project9/include/CreationPattern/: AbstrctFactory.h  Builder.h  Factory.h  Singleton.h
project9/tests/: TEST01.cpp  TEST02.cpp
